--- a/app/src/main/res/xml/badge_widget_provider.xml
+++ b/app/src/main/res/xml/badge_widget_provider.xml
@@ -4,6 +4,6 @@
     android:initialLayout="@layout/widget_image"
     android:minWidth="40dp"
     android:minHeight="40dp"
-    android:resizeMode="none" />
+    android:resizeMode="horizontal|vertical" />
 
 
