--- a/app/src/main/res/layout/widget_image.xml
+++ b/app/src/main/res/layout/widget_image.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        tools:src="@drawable/ic_badge_loading" />
+        tools:src="@color/colorPrimary" />
 
 </FrameLayout>
